<resources>
  <string name="app_name"
          translatable="false">Meet Meal</string>
  <string name="all">All</string>
  <string name="breakfast">Breakfast</string>
  <string name="lunch">Lunch</string>
  <string name="dinner">Dinner</string>
  <string name="search">Search</string>
  <string name="meals">Meals</string>
  <string name="group">Group:</string>
  <string name="groups">Groups</string>
  <string name="my_meals">My meals</string>
  <string name="account">Account</string>
  <string name="login">Login</string>
  <string name="sign_in">Sign In</string>
  <string name="registration">Registration</string>
  <string name="register">Register</string>
  <string name="sign_out">Sign Out</string>
  <string name="groups_selection">Groups selection</string>

  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="both">Both</string>
  <string name="unknown">Unknown</string>

  <string name="people">people</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="not_logged_in">You are not logged in</string>

  <string name="required_field">This field is required</string>

  <!-- Add meal -->
  <string name="add_meal">Add meal</string>
  <string name="add_meal_cost">Expected cost</string>
  <string name="add_meal_address">Address</string>
  <string name="add_meal_address_required">Address is required</string>
  <string name="add_meal_time">Time:</string>
  <string name="add_meal_date">Date:</string>
  <string name="add_meal_people_invited">People invited</string>
  <string name="add_meal_same_gender">Gender:</string>
  <string name="add_meal_create">Create</string>
  <string name="add_meal_date_incorrect_value">Wrong date added</string>
  <string name="add_meal_pick_date">PICK DATE</string>
  <string name="add_meal_event_name">Event name</string>
  <string name="add_meal_event_name_required">Event name is required</string>
  <string name="add_meal_pick_time">PICK TIME</string>
  <string name="time">%1$d : %2$d</string>

  <!-- Meal detail -->
  <string name="meal_detail_same_gender">Same gender</string>
  <string name="meal_detail_provider">Provider</string>
  <string name="meal_detail_time">Time</string>
  <string name="meal_detail_cost">Cost</string>
  <string name="meal_detail_save">Save</string>
  <string name="meal_detail_rest_places">Rest %1$s places</string>
  <string name="meal_detail_people_count">For %1$s people</string>
  <string name="meal_detail_price_per_person">%1$s Kč per person</string>
  <string name="meal_detail_invited_by">You\'re invited by</string>
  <string name="meal_detail_sign_in">I\'m in!</string>
  <string name="meal_detail_edit">Edit</string>
  <string name="meal_unable_join">Unable join yet</string>
  <string name="meal_successfull_join">Joined successfully</string>

  <!-- Registration -->
  <string name="login_invalid_account">Invalid e-mail or password</string>
  <string name="registration_weak_password">Weak password</string>
  <string name="registration_name">Name</string>
  <string name="registration_email">E-mail</string>
  <string name="registration_email_format">Not a valid e-mail</string>
  <string name="registration_password">Password</string>
  <string name="registration_password_again">Password again</string>
  <string name="registration_password_not_same">Passwords is not same</string>
  <string name="registration_gender">Gender</string>
  <string name="registration_gender_required">Gender is required</string>
  <string name="registration_time_required">Date and time is required</string>
  <string name="registration_time_before_now">Date and time have to be in future</string>
  <string name="registration_woman">Woman</string>
  <string name="registration_man">Man</string>
  <string name="registration_register">Register</string>
  <string name="change_password">Change password:</string>
  <string name="current_password">Current password</string>
  <string name="new_password">New password</string>
  <string name="new_again_password">New password again</string>
  <string name="change_password_button">Change password</string>
  <string name="password_changed">Password successfully changed</string>

  <!-- Edit meal -->
  <string name="edit_meal_save">Save</string>
  <string name="edit_meal">Edit meal</string>

  <string name="unknown_error">Unknown error</string>

</resources>
