<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="cz.vutbr.fit.meetmeal.viewmodel.MyMealListViewModel" />
  </data>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      android:orientation="vertical">

      <TextView
        android:id="@+id/textLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/add_meal_cost" />

      <EditText
        android:id="@+id/add_meal_cost_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="70"
        android:textAlignment="center" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/add_meal_address" />

      <EditText
        android:id="@+id/add_meal_address_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Budova D 231"
        android:textAlignment="center" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/add_meal_time" />

      <EditText
        android:id="@+id/add_meal_time_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="time"
        android:textAlignment="center" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/add_meal_date" />

      <TextView
        android:id="@+id/add_meal_date_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:text="@string/add_meal_pick_date"
        android:textAlignment="center" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/add_meal_people_invited" />

      <EditText
        android:id="@+id/add_meal_people_invited_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="1"
        android:textAlignment="center" />

      <Switch
        android:id="@+id/add_meal_same_gender_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/add_meal_same_gender" />

      <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/edit_meal_save" />

    </LinearLayout>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>