<?xml version="1.0" encoding="utf-8"?>

<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >
  <data>
    <import type="android.view.View"/>
    <import type="cz.vutbr.fit.meetmeal.model.User.Gender"/>
    <variable
      name="viewModel"
      type="cz.vutbr.fit.meetmeal.viewmodel.RegistrationViewModel"
      />
  </data>
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
      android:layout_margin="@dimen/margin_normal"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

      <EditText
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
        android:id="@+id/registration_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_gravity="center"
        android:hint="@string/registration_name"
        android:text="@={viewModel.name}"
        app:error="@{viewModel.nameError}"
        android:inputType="textPersonName"
        android:ems="10"
        />

      <EditText
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
        android:id="@+id/registration_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_gravity="center"
        android:hint="@string/registration_email"
        android:text="@={viewModel.email}"
        app:error="@{viewModel.emailError}"
        android:inputType="textEmailAddress"
        android:ems="10"
        />

      <EditText
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
        android:id="@+id/registration_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_gravity="center"
        android:hint="@string/registration_password"
        android:text="@={viewModel.password}"
        app:error="@{viewModel.passwordError}"
        android:inputType="textPassword"
        android:ems="10"
        />

      <EditText
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
        android:id="@+id/registration_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_gravity="center"
        android:hint="@string/registration_password_again"
        android:text="@={viewModel.passwordAgain}"
        app:error="@{viewModel.passwordAgainError}"
        android:inputType="textPassword"
        android:ems="10"
        />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mega"
        android:padding="@dimen/margin_mini"
        android:layout_gravity="center"
        >
        <TextView
          style="@style/Base.TextAppearance.AppCompat.Medium"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_gravity="top"
          android:text="@string/registration_gender"
          />

        <RadioGroup
          android:orientation="vertical"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          >

          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_woman"
            android:checked="@={viewModel.isFemale}"
            />

          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_man"
            android:checked="@={viewModel.isMale}"
            />

        </RadioGroup>
      </LinearLayout>

      <Button
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mega"
        android:layout_marginBottom="@dimen/margin_mega"
        android:layout_gravity="center"
        android:text="@string/registration_register"
        android:textSize="@dimen/mdtp_material_button_textsize"
        android:onClick="@{() -> viewModel.onRegister()}"
        />
    </LinearLayout>
  </ScrollView>
</layout>
