<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  >

  <data>
    <import type="android.view.View"/>
    <variable
      name="viewModel"
      type="cz.vutbr.fit.meetmeal.viewmodel.MainViewModel"
      />
  </data>
  <android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    >

    <android.support.design.widget.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay"
      android:animateLayoutChanges="true"
      >

      <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/app_name"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />
      <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchorGravity="top|center"
        android:visibility="@{viewModel.dayTimePickerVisible ? View.VISIBLE : View.GONE}"
        >

        <android.support.design.widget.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/breakfast"
          />
        <android.support.design.widget.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/lunch"
          />
        <android.support.design.widget.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dinner"
          />
      </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <include
      android:id="@+id/include"
      layout="@layout/content_main"
      />

    <android.support.design.widget.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/fab_margin"
      android:layout_gravity="bottom|end"
      app:srcCompat="@drawable/ic_add"
      android:onClick="@{(view) -> viewModel.onAddClick()}"
      />

  </android.support.design.widget.CoordinatorLayout>
</layout>