<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >
  <data>
    <import type="android.view.View"/>
    <import type="cz.vutbr.fit.meetmeal.utils.Converter"/>
    <variable
      name="viewModel"
      type="cz.vutbr.fit.meetmeal.viewmodel.AddMealViewModel"
      />
  </data>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="@{viewModel.firebaseUser == null ? View.GONE : View.VISIBLE}"
      >
      <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        >
        <EditText
          style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
          android:id="@+id/add_meal_name_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_normal"
          android:layout_gravity="center"
          android:text="@={viewModel.name}"
          android:hint="@string/add_meal_event_name"
          app:error="@{viewModel.nameError}"
          android:ems="10"
          />
        <EditText
          style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
          android:id="@+id/add_meal_people_invited_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_normal"
          android:layout_gravity="center"
          android:text="@={Converter.intToString(viewModel.peopleCount, viewModel.peopleCount)}"
          android:hint="@string/add_meal_people_invited"
          android:inputType="numberDecimal"
          app:error="@{viewModel.peopleCountError}"
          android:ems="10"
          />
        <EditText
          style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
          android:id="@+id/add_meal_cost_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_normal"
          android:layout_gravity="center"
          android:text="@={Converter.intToString(viewModel.price, viewModel.price)}"
          android:hint="@string/add_meal_cost"
          android:inputType="numberDecimal"
          app:error="@{viewModel.priceError}"
          android:ems="10"
          />
        <EditText
          style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
          android:id="@+id/add_meal_address_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_normal"
          android:layout_gravity="center"
          android:text="@={viewModel.address}"
          android:hint="@string/add_meal_address"
          android:inputType="textPersonName"
          app:error="@{viewModel.addressError}"
          android:ems="10"
          />
        <Spinner
          style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
          android:id="@+id/group_spinner"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_normal"
          android:onItemSelected="@{(p, v, pos, id) -> viewModel.onGroupSelected(pos)}"
          />
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_normal"
          android:layout_gravity="center"
          >
          <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/add_meal_date"
            />
          <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:id="@+id/add_meal_date_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingLeft="@dimen/margin_mini"
            android:text="@{viewModel.dateSelected ? viewModel.time.toString(viewModel.dateFormatter) : @string/add_meal_pick_date}"
            android:textColor="@{viewModel.dateSelected ? @color/colorSecondaryText : @color/colorPrimary}"
            android:ems="10"
            />
        </LinearLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_normal"
          android:layout_gravity="center"
          >
          <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/add_meal_time"
            />
          <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:id="@+id/add_meal_time_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@{viewModel.timeSelected ? viewModel.time.toString(viewModel.timeFormatter) : @string/add_meal_pick_time}"
            android:hint="@string/add_meal_time"
            android:textColor="@{viewModel.timeSelected ? @color/colorSecondaryText : @color/colorPrimary}"
            android:ems="10"
            />
        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_normal"
          android:layout_gravity="center"
          >
          <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:text="@string/add_meal_same_gender"
            />

          <RadioGroup
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <RadioButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/both"
              android:checked="@={viewModel.booth}"
              />

            <RadioButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/male"
              android:checked="@={viewModel.male}"
              />

            <RadioButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/female"
              android:checked="@={viewModel.female}"
              />
          </RadioGroup>
        </LinearLayout>
      </LinearLayout>
    </ScrollView>
    <include
      android:id="@+id/layout_not_logged_in"
      layout="@layout/layout_not_logged_in"
      app:visible="@{viewModel.firebaseUser == null}"
      />

    <include
      layout="@layout/layout_loading_overlay"
      app:visible="@{viewModel.loading}"
      />
  </FrameLayout>
</layout>