<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
    <import type="android.view.View"/>
    <variable
      name="visible"
      type="Boolean"
      />
  </data>
  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="@{visible ? View.VISIBLE : View.GONE}"
    >
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_normal"
      android:layout_gravity="center"
      >
      <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_huge"
        android:layout_gravity="center"
        android:text="@string/not_logged_in"
        />

      <Button
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_gravity="center|bottom"
        android:text="@string/sign_in"
        android:textSize="@dimen/mdtp_material_button_textsize"
        />

      <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mega"
        android:layout_gravity="center"
        android:text="@string/registration"
        android:textSize="@dimen/mdtp_material_button_textsize"
        />
    </LinearLayout>
  </FrameLayout>
</layout>