<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  >
  <data>
  </data>
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/meal_detail_provider"
      />
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_normal"
      >
      <ImageView
        android:id="@+id/meal_detail_user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@color/colorPrimary"
        />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="USER"
        />
    </LinearLayout>
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_normal"
      >
      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/meal_detail_same_sex"
        />
      <TextView
        android:id="@+id/meal_detail_same_sex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="ANO"
        />
    </LinearLayout>
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_normal"
      >
      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/meal_detail_time"
        />
      <TextView
        android:id="@+id/meal_detail_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="12:34"
        android:textAlignment="textStart"
        />
    </LinearLayout>
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_normal"
      >
      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/meal_detail_cost"
        />
      <TextView
        android:id="@+id/meal_detail_cost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="42"
        android:textAlignment="textStart"
        />
    </LinearLayout>
    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/meal_detail_save"
      android:visibility="gone"
      />
  </LinearLayout>
</layout>